Added main content

--- a/Ecommerce-Web/src/app/app.component.html
+++ b/Ecommerce-Web/src/app/app.component.html
@@ -52,5 +52,8 @@
       </div>
     </header>
     <!-- END HEADER DESKTOP-->
+
+    <!-- MAIN CONTENT-->
+    <app-product-list></app-product-list>
   </div>
 </div>
