--- a/Ecommerce-Web/src/app/components/product-list/product-list.component.html
+++ b/Ecommerce-Web/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,31 @@
-<table class="table">
+<div class="main-content">
+    <div class="section-content section-content-p30">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- loop over the collection of products -->
+                <div *ngFor="let tempProduct of products" class="col-md-3">
+                    <div class="product-box">
+                        <img src="{{ tempProduct.imageUrl }}" class="img-responsive">
+                        <h1> {{ tempProduct.name }} </h1>
+                        <div class="price">{{ tempProduct.unitPrice | currency:'USD' }}</div>
+                        <a href="#" class="primary-btn">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+<!-- Version 1.0 -->
+
+<!-- <table class="table">
     <thead class="table-dark">
         <tr>
             <th></th>
@@ -18,4 +45,4 @@
             <td>{{tempProduct.unitsInStock}}</td>
         </tr>     
     </tbody>
-</table>
+</table> -->
