--- a/Ecommerce-Web/src/app/app.component.html
+++ b/Ecommerce-Web/src/app/app.component.html
@@ -7,18 +7,9 @@
         <img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
       </a>
     </div>
-    <div class="menu-sidebar-content js-scrollbar1">
-      <nav class="navbar-sidebar">
-        <ul class="list-unstyled navbar-list">
-          <li>
-            <a routerLink="/category/1" routerLinkActive="active-link">Books</a>
-          </li>
-          <li>
-            <a routerLink="/category/2" routerLinkActive="active-link">Coffee Mugs</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+
+    <!-- product menu component -->
+    <app-product-category-menu></app-product-category-menu>
   </aside>
   <!-- END MENU SIDEBAR-->
 
