--- a/Ecommerce-Web/src/app/components/product-details/product-details.component.html
+++ b/Ecommerce-Web/src/app/components/product-details/product-details.component.html
@@ -1,5 +1,16 @@
 <div class="detail-section">
     <div class="container-fluid">
-        <p style="margin-top: 100px;">product-details works!</p>
+        
+        <img src="{{ product.imageUrl }}" alt="Product-Image" class="detail-img">
+
+        <h3>{{ product.name }}</h3>
+        <div class="price">{{ product.unitPrice | currency: 'USD' }}</div>
+        <a href="#" class="primary-btn">Add to cart</a>
+
+        <hr>
+        <h4>Description</h4>
+        <p>{{ product.description }}</p>
+
+        <a routerLink="/products" class="mt-5">Back to Product List</a>
     </div>
 </div>
