--- a/Ecommerce-Web/src/app/components/product-list/product-list.component.html
+++ b/Ecommerce-Web/src/app/components/product-list/product-list.component.html
@@ -39,7 +39,7 @@
 
                     <div class="col-md-6">
                         <div class="row">
-                            <div class="col-md-9" style="padding-left: 20%">
+                            <div class="col-md-9" style="padding-left: 10%">
 
                                 <ngb-pagination [(page)]="pageNumber"
                                                 [pageSize]="pageSize"
@@ -55,9 +55,9 @@
 
                                 <select (change) = "updatePageSize($event)">
                                     <option selected="true">5</option>
-                                    <option selected="true">10</option>
-                                    <option selected="true">20</option>
-                                    <option selected="true">50</option>
+                                    <option>10</option>
+                                    <option>20</option>
+                                    <option>50</option>
                                 </select>
                             </div>
                         </div>
