--- a/Ecommerce-Web/src/app/app.component.html
+++ b/Ecommerce-Web/src/app/app.component.html
@@ -24,11 +24,9 @@
             <!-- Searching the product by category -->
             <app-search></app-search>
 
-            <div class="cart-area d-n">
-              <a href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </a>
-            </div>
+            <!-- Add to cart(status) -->
+            <app-cart-status></app-cart-status>
+
           </div>
           <div class="account-wrap"></div>
         </div>
