--- a/Ecommerce-Web/src/app/components/cart-details/cart-details.component.html
+++ b/Ecommerce-Web/src/app/components/cart-details/cart-details.component.html
@@ -23,7 +23,29 @@
                         <td>
                             <div class="items">
                                 <label>Quantity:</label>
-                                {{ tempCartItem.quantity }}
+
+                                <div class="row no-gutters">
+                                    <div class="col">
+                                        <button (click)="incrementQuantity(tempCartItem)"
+                                            class="btn btn-primary btn-sm">
+                                            <i class="fa fa-plus"></i>
+                                        </button>
+                                    </div>
+
+                                    <div class="col ml-4 mr-2">
+                                        {{ tempCartItem.quantity }}
+                                    </div>
+
+                                    <div class="col">
+                                        <button (click)="decrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
+                                            <i class="fa fa-minus"></i>
+                                        </button>
+                                    </div>
+
+                                    <div class="col-8">
+
+                                    </div>
+                                </div>
                             </div>
 
                             <p class="mt-2">Subtotal: {{ tempCartItem.quantity * tempCartItem.unitPrice | currency:
@@ -45,7 +67,7 @@
 
             <!-- if cart is empty then display a message -->
             <div *ngIf="cartItems.length==0" class="alert alert-warning col-md-12" role="alert">
-                Your shopping cart is empty.    
+                Your shopping cart is empty.
             </div>
 
         </div>
