--- a/Ecommerce-Web/src/app/components/checkout/checkout.component.html
+++ b/Ecommerce-Web/src/app/components/checkout/checkout.component.html
@@ -113,8 +113,13 @@
 
                                 <div *ngIf="shippingAddressStreet?.invalid && (shippingAddressStreet?.dirty || shippingAddressStreet?.touched)"
                                     class="alert alert-danger mt-1">
-                                    <div *ngIf="shippingAddressStreet?.errors?.required || shippingAddressStreet?.errors?.notOnlyWhitespace">
+                                    <div
+                                        *ngIf="shippingAddressStreet?.errors?.required || shippingAddressStreet?.errors?.notOnlyWhitespace">
                                         Street is required
+                                    </div>
+
+                                    <div *ngIf="shippingAddressStreet?.errors?.minlength">
+                                        Street must be at least 2 characters long
                                     </div>
                                 </div>
 
@@ -132,8 +137,13 @@
 
                                 <div *ngIf="shippingAddressCity?.invalid && (shippingAddressCity?.dirty || shippingAddressCity?.touched)"
                                     class="alert alert-danger mt-1">
-                                    <div *ngIf="shippingAddressCity?.errors?.required || shippingAddressCity?.errors?.notOnlyWhitespace">
+                                    <div
+                                        *ngIf="shippingAddressCity?.errors?.required || shippingAddressCity?.errors?.notOnlyWhitespace">
                                         City is required
+                                    </div>
+
+                                    <div *ngIf="shippingAddressCity?.errors?.minlength">
+                                        City must be at least 2 characters long
                                     </div>
                                 </div>
 
@@ -174,8 +184,13 @@
 
                                 <div *ngIf="shippingAddressZipCode?.invalid && (shippingAddressZipCode?.dirty || shippingAddressZipCode?.touched)"
                                     class="alert alert-danger mt-1">
-                                    <div *ngIf="shippingAddressZipCode?.errors?.required || shippingAddressZipCode?.errors?.notOnlyWhitespace">
+                                    <div
+                                        *ngIf="shippingAddressZipCode?.errors?.required || shippingAddressZipCode?.errors?.notOnlyWhitespace">
                                         Zipcode is required
+                                    </div>
+
+                                    <div *ngIf="shippingAddressZipCode?.errors?.minlength">
+                                        Zipcode must be at least 2 characters long
                                     </div>
                                 </div>
 
@@ -207,6 +222,14 @@
                                         {{ country.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="billingAddressCountry?.invalid && (billingAddressCountry?.dirty || billingAddressCountry?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressCountry?.errors?.required">
+                                        Country is required
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -218,6 +241,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text" />
+
+                                <div *ngIf="billingAddressStreet?.invalid && (billingAddressStreet?.dirty || billingAddressStreet?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div
+                                        *ngIf="billingAddressStreet?.errors?.required || billingAddressStreet?.errors?.notOnlyWhitespace">
+                                        Street is required
+                                    </div>
+
+                                    <div *ngIf="billingAddressStreet?.errors?.minlength">
+                                        State must be at least 2 characters long
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -229,6 +265,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text" />
+
+                                <div *ngIf="billingAddressCity?.invalid && (billingAddressCity?.dirty || billingAddressCity?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div
+                                        *ngIf="billingAddressCity?.errors?.required || billingAddressCity?.errors?.notOnlyWhitespace">
+                                        City is required
+                                    </div>
+
+                                    <div *ngIf="billingAddressCity?.errors?.minlength">
+                                        City must be at least 2 characters long
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -244,6 +293,14 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="billingAddressState?.invalid && (billingAddressState?.dirty || billingAddressState?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressState?.errors?.required">
+                                        State is required
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -255,6 +312,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text" />
+
+                                <div *ngIf="billingAddressZipCode?.invalid && (billingAddressZipCode?.dirty || billingAddressZipCode?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div
+                                        *ngIf="billingAddressZipCode?.errors?.required || billingAddressZipCode?.errors?.notOnlyWhitespace">
+                                        Zipcode is required
+                                    </div>
+
+                                    <div *ngIf="billingAddressZipCode?.errors?.minlength">
+                                        Zipcode must be at least 2 characters long
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
