--- a/Ecommerce-Web/src/app/components/checkout/checkout.component.html
+++ b/Ecommerce-Web/src/app/components/checkout/checkout.component.html
@@ -250,7 +250,7 @@
                                     </div>
 
                                     <div *ngIf="billingAddressStreet?.errors?.minlength">
-                                        State must be at least 2 characters long
+                                        Street must be at least 2 characters long
                                     </div>
                                 </div>
 
@@ -344,6 +344,14 @@
                                     <option>Visa</option>
                                     <option>Master</option>
                                 </select>
+
+                                <div *ngIf="creditCardType?.invalid && (creditCardType?.dirty || creditCardType?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardType?.errors?.required">
+                                        Card Type is required
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -355,6 +363,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="nameOnCard" type="text" />
+
+                                <div *ngIf="creditCardNameOnCard?.invalid && (creditCardNameOnCard?.dirty || creditCardNameOnCard?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div
+                                        *ngIf="creditCardNameOnCard?.errors?.required || creditCardNameOnCard?.errors?.notOnlyWhitespace">
+                                        Name is required
+                                    </div>
+
+                                    <div *ngIf="creditCardNameOnCard?.errors?.minlength">
+                                        Name must be at least 2 characters long
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -366,6 +387,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="cardNumber" type="text" />
+
+                                <div *ngIf="creditCardNumber?.invalid && (creditCardNumber?.dirty || creditCardNumber?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardNumber?.errors?.required">
+                                        Card Number is required
+                                    </div>
+
+                                    <div *ngIf="creditCardNumber?.errors?.pattern">
+                                        Card Number must be 16 digits long
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -377,6 +410,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text" />
+
+                                <div *ngIf="creditCardSecurityCode?.invalid && (creditCardSecurityCode?.dirty || creditCardSecurityCode?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardSecurityCode?.errors?.required">
+                                        Security Code is required
+                                    </div>
+
+                                    <div *ngIf="creditCardSecurityCode?.errors?.pattern">
+                                        Security Code must be 3 digits long
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
