--- a/Ecommerce-Web/src/app/app.component.html
+++ b/Ecommerce-Web/src/app/app.component.html
@@ -4,7 +4,7 @@
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
       <a routerLink="/products">
-        <img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
+        <img src="assets/images/logo.jpg" alt="luv2shop" class="img-responsive">
       </a>
     </div>
 
